:bug: Fixes padding on smaller screens when security image is hidden
- The specificity of auth-content and auth-header classes were more because of the addition of #okta-sign-in.
- Because of that anything under .can-remove-beacon .auth-* did not affect anything as id selector was more specific.
- Adding #okta-sign-in to .can-remove-beacon to imporove specificity, so that the padding overloads apply on small screens.

--- a/assets/sass/_layout.scss
+++ b/assets/sass/_layout.scss
@@ -60,7 +60,9 @@
     padding-right: 20px;
   }
 
-  .can-remove-beacon & {
+  // scss-lint:disable IdSelector
+  #okta-sign-in.can-remove-beacon & {
+  // scss-lint:disable IdSelector
     padding-top: 40px;
 
     @include max-height-mq(550px) {
@@ -82,8 +84,9 @@
 
 .enroll-choices {
   padding-top: 20px;
-
-  .can-remove-beacon & {
+  // scss-lint:disable IdSelector
+  #okta-sign-in.can-remove-beacon & {
+  // scss-lint:disable IdSelector
     @include max-height-mq(550px) {
       padding-top: 15px;
     }
